<resources>
    <string name="app_name">TicTacToe</string>
    <string name="welcome_to_tic_tac_toe">Welcome to Tic Tac Toe</string>
    <string name="player_1">Player #1</string>
    <string name="player1">Player1</string>
    <string name="name">Name</string>
    <string name="player_2">Player #2</string>
    <string name="player2">Player2</string>
    <string name="play">Play</string>
    <string name="_0">0</string>
    <string name="points">Points:</string>
    <string name="player">Player</string>
    <string name="plus">+</string>
    <string name="restart_game">Restart Game</string>
    <string name="xxxxx">xxxxx</string>
    <string name="yyyyy">yyyyy</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="login_message">You can select any users from the list\nAnd any icons if you click on them</string>
    <string name="_11">11</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="return_str">Return</string>
    <string name="player1_img">player1_img</string>
    <string name="player2_img">player2_img</string>
    <string name="turn_player">Turn: %1$s</string>
</resources>