<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#039BE5"
    android:orientation="vertical"
    android:saveEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_x"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_1"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic_x" />

        <ImageView
            android:id="@+id/imgv_o"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_2"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic_o" />

        <ImageView
            android:id="@+id/imgv_lightning"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_3"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic_lightning" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_send_btn"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_4"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__01_send_button" />

        <ImageView
            android:id="@+id/imgv_plane"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_5"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__02_black_plane" />

        <ImageView
            android:id="@+id/imgv_camera"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_6"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__03_instagram_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_car"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_7"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__04_car_front" />

        <ImageView
            android:id="@+id/imgv_subway"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_8"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__05_public_transport_subway" />

        <ImageView
            android:id="@+id/imgv_hotel"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_9"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__06_hotel_with_three_floors" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_cycle"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_10"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__07_man_cycling" />

        <ImageView
            android:id="@+id/imgv_home"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:background="#5E35B1"
            android:contentDescription="@string/_11"
            android:onClick="selectImage"
            android:paddingHorizontal="5dp"
            app:srcCompat="@drawable/ic__08_home_button" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="resumeLogin"
        android:text="@string/return_str" />

</LinearLayout>