<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3949AB"
    android:saveEnabled="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#43A047"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_player_one_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player"
                    tools:ignore="NestedWeights" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/points" />

                    <TextView
                        android:id="@+id/txv_player_one_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_0"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FFB300"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_player_two_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/player"
                    tools:ignore="NestedWeights" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/points" />

                    <TextView
                        android:id="@+id/txv_player_two_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_0"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_player_turn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/turn_player"
                android:textColor="#7CB342"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@android:color/black">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp">

                <Button
                    android:id="@+id/btn_tl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_tm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider7"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_tr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_ml"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider8"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider9"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_mr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_bl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider10"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_bm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/divider11"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/btn_br"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_light"
                    android:drawablePadding="-84px"
                    android:onClick="selectCase"
                    android:paddingVertical="20dp"
                    android:text="@string/plus"
                    android:textSize="30sp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:onClick="restartGame"
        android:text="@string/restart_game"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>